--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="#carousel_5ae2"><i class="fas fa-envelope"></i> Contato</a></li>
             <li>
               <a href="#carousel_e68f" style="background: #6e0101; color: #fff; font-family: Arial, sans-serif; padding: 0px 18px; border-radius: 12px; display: inline-block;">
-                <i class="fa-solid fa-user" style="color: #fff; margin-right: 3px;"></i> Login
+                <i class="fa-solid fa-user" style="color: #fff; margin-right: 3px;"></i> Download
               </a>
               </a>
             </li>
