--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <li><a href="#carousel_e68f"><i class="fas fa-envelope"></i> Valores</a></li>
             <li><a href="#carousel_5ae2"><i class="fas fa-envelope"></i> Contato</a></li>
             <li>
-              <a href="#carousel_e68f" style="background: #6e0101; color: #fff; font-family: Arial, sans-serif; padding: 0px 18px; border-radius: 12px; display: inline-block;">
-                <i class="fa-solid fa-user" style="color: #fff; margin-right: 3px;"></i> Download
+              <a href="https://vip.acessorias.com/scsassessoriaempresarial" style="background: #6e0101; color: #fff; font-family: Arial, sans-serif; padding: 0px 18px; border-radius: 12px; display: inline-block;">
+                <i class="fa-solid fa-user" style="color: #fff; margin-right: 3px;"></i> Login
               </a>
               </a>
             </li>
@@ -274,9 +274,45 @@
       </div>
     </div>
   </section>
-
-
-  <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="sec-92c2">
+  <!-- Seção de Download de App -->
+  <section class="u-align-center u-clearfix u-container-align-center u-section-download" id="download-section" style="position: relative; padding: 150px 0px 0px  ; background: url('images/background-downloads.svg') center center/cover no-repeat; width: 100%; min-height: 100%; color: #fff;">
+    <svg viewBox="0 0 500 250" preserveAspectRatio="none"
+     style="position: absolute; top: 0; left: 0; width: 100%; height: 300px;">
+  <path d="M0,80 C100,10 400,50 500,0 L500,0 L0,0 Z" fill="#ffffff" />
+</svg>
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1" style="display: flex; flex-wrap: wrap; align-items: flex-start; justify-content: flex-end;">
+      <!-- Imagem alinhada à esquerda, encostada na borda da página -->
+      <div style="position: absolute; left: 0; top: 0; bottom: 0; display: flex; align-items: flex-end; z-index: 2; height: 100%; pointer-events: none; margin-left: 0px;">
+        <img src="images/hand-cell.png" alt="App SCS Contabilidade" style="max-width: 600px; width: 100%; height: auto; object-fit: contain; display: block; margin-bottom: -1px; padding-left: 0;">
+      </div>
+      <!-- Conteúdo alinhado totalmente à direita -->
+      <div style="flex: 0 0 60%; min-width: 260px; padding-left: 680px; padding-bottom: 140px; display: flex; flex-direction: column; align-items: flex-end; text-align: right;">
+        <h1 class="u-custom-font u-font-oswald" style="font-size: 1.7rem; color: #fff; margin-bottom: 12px; text-align: right;">Baixe o App SCS Contabilidade</h1>
+        <p class="u-custom-font u-font-merriweather" style="font-size: 1.05rem; margin-bottom: 22px; text-align: right; color: #fff;">
+          Tenha acesso às nossas soluções na palma da sua mão.<br>
+          Disponível para iOS e Android.
+        </p>
+        <div style="display: flex; flex-direction: row; gap: 18px; margin-bottom: 18px; align-items: center; width: 100%; justify-content: flex-end;">
+          <!-- Card QR Code -->
+          <div style="background: #fff; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.10); padding: 5px; width: 115px; height: 115px; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow: hidden;">
+            <img src="images/qrcode.png" alt="QR Code" style="width: 100%; height: 100%; object-fit: cover; border-radius: 5px 12px 0 0; background: #fff;">
+          </div>
+          <!-- Botões -->
+          <div style="display: flex; flex-direction: column; gap: 12px; align-items: flex-end;">
+            <a href="https://play.google.com/store/apps/details?id=com.scsassessoriaempresarial" target="_blank"
+               style="background: #000; color: #fff; width: 220px; height: 52px; display: flex; align-items: center; justify-content: center; border-radius: 7px; text-decoration: none; font-weight: 500; font-size: 1.08rem;">
+              <i class="fab fa-google-play" style="margin-right: 7px; font-size: 1.3em;"></i> Google Play
+            </a>
+            <a href="https://linktr.ee/scscontabilidade" target="_blank"
+               style="background: #000; color: #fff; width: 220px; height: 52px; display: flex; align-items: center; justify-content: center; border-radius: 7px; text-decoration: none; font-weight: 500; font-size: 1.08rem;">
+              <i class="fab fa-apple" style="margin-right: 7px; font-size: 1.3em;"></i> App Store
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="sec-92c2" >
     <div class="u-clearfix u-sheet u-sheet-1">
       <p class="u-small-text u-text u-text-variant u-text-1">Texto de Amostra. Clique para selecionar o Elemento de
         Texto.</p>
