--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
           <input type="checkbox" id="menu-toggle" class="menu-toggle">
           <label for="menu-toggle" class="menu-icon">&#9776;</label>
   
-          <ul class="nav-links">
+            <ul class="nav-links">
             <li><a href="#carousel_0c4b"><i class="fas fa-home"></i>Inicio</a></li>
             <li><a href="#carousel_1296"><i class="fas fa-users"></i> Sobre</a></li>
             <li><a href="#carousel_e68f"><i class="fas fa-envelope"></i> Valores</a></li>
             <li><a href="#carousel_5ae2"><i class="fas fa-envelope"></i> Contato</a></li>
+            <li><a href="#download-section"><i class="fas fa-download"></i> Download</a></li>
             <li>
               <a href="https://vip.acessorias.com/scsassessoriaempresarial" style="background: #6e0101; color: #fff; font-family: Arial, sans-serif; padding: 0px 18px; border-radius: 12px; display: inline-block;">
                 <i class="fa-solid fa-user" style="color: #fff; margin-right: 3px;"></i> Login
