--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/nicepages.css" media="screen">
   <link rel="stylesheet" href="css/index.css" media="screen">
   <script class="u-script" type="text/javascript" src="js/jquery.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="js/page.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="js/nicepage.js" defer=""></script>
   <script src="js/services-carousel.js" defer></script>
   <meta name="referrer" content="origin">
   <link id="u-theme-google-font" rel="stylesheet"
@@ -68,7 +68,7 @@
   <section class="u-align-center u-clearfix u-container-align-center u-image u-section-1" id="carousel_0c4b" style="padding-top: 90px;">
     <section class="u-align-center u-clearfix u-container-align-center u-image u-section-1" id="carousel_0c4b">
     </section>
-    <video autoplay muted loop playsinline poster="images/intro.jpg">
+    <video autoplay muted loop playsinline preload="auto" poster="images/sddd-min.jpg">
       <source src="images/intro.mp4" type="video/mp4">
       Seu navegador não suporta a tag de vídeo.
     </video>
